--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -72,6 +72,7 @@ jobs:
                 raise Exception("Query failed to run by returning code of {}. {}".format(request.status_code, query))
           issues = ${{ steps.gather-cards.outputs.issues }}
           for issue in issues:
+            print(issue)
             issue_id = issue.node.id
             print("Found linked issue: " + issue_id)
             for projectCard in issue.node.projectCards.nodes:
