--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -70,7 +70,7 @@ jobs:
 
           token = os.environ['GH_TOKEN']
           headers = {"Authorization": "Bearer " + token}
-          def run_query(query): # A simple function to use requests.post to make the API call. Note the json= section.
+          def run_mutation(query): # A simple function to use requests.post to make the API call. Note the json= section.
             request = requests.post('https://api.github.com/graphql', json={'query': query}, headers=headers)
             if request.status_code == 200:
                 return request.json()
@@ -92,11 +92,9 @@ jobs:
                   print("Moving card to column: " + column["name"] + " " + column_id)
                   # move the card to the "Done" column
                   query = """
-                  {
-                    mutation {
-                        moveProjectCard(input: {cardId: "%s" columnId: "%s"}) {
-                        clientMutationId
-                      }
+                  mutation {
+                      moveProjectCard(input: {cardId: "%s" columnId: "%s"}) {
+                      clientMutationId
                     }
                   }
                   """ % (projectCard["id"], column_id)
