--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -1,7 +1,7 @@
 name: Critical Issue Created
 on:
   issues:
-    types: [opened, reopened]
+    types: [opened, reopened, assigned]
 jobs:
   slack:
     runs-on: ubuntu-latest
