--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -2,10 +2,15 @@ name: Pull Request Merged
 on:
   pull_request:
     types: [closed]
+  workflow_dispatch:
+    inputs:
+      pr_id:
+        description: "Pull Request ID"
+        required: true
 jobs:
   move-issue-card:
     # only run if PR is merged and target branch is staging
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'staging'
+    # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'staging'
     permissions:
       issues: write
       repository-projects: write
