--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -31,6 +31,16 @@ jobs:
             PR_ID=$INPUT_PR_ID
           fi
 
+          test="$( gh api graphql -f query='
+          query {
+            node(id: "PVT_kwHOAsyhUs4AahfN") {
+              ... on ProjectV2{
+                title
+              }
+            }
+          }')"
+          echo "Test result: $test"
+
           issues="$( gh api graphql -f query='
           query {
             node(id: "'"$PR_ID"'") {
