--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -101,6 +101,7 @@ jobs:
         id: move-cards
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUES: ${{ steps.gather-cards.outputs.issues }}
         shell: python
         run: |
           import requests
@@ -114,7 +115,8 @@ jobs:
                 return request.json()
             else:
                 raise Exception("Query failed to run by returning code of {}. {}".format(request.status_code, query))
-          issues = ${{ steps.gather-cards.outputs.issues }}
+          
+          issues = os.environ['ISSUES']
           for issue in issues:
             issue_id = issue["node"]["id"]
             print("Found linked issue: " + issue_id)
